--- a/src/main.css
+++ b/src/main.css
@@ -2867,7 +2867,7 @@ input, select, textarea {
 		display: -ms-flex;
 		display: flex;
 		width: 100%;
-		margin: 0 0 3em 0;
+		margin: 0 0 2em 0;
 		padding: 0;
 		list-style: none;
 		cursor: default;
@@ -2879,28 +2879,30 @@ input, select, textarea {
 			-ms-flex: 1;
 			flex: 1;
 			padding: 1.5em;
+			margin-left: .5em;
+			margin-right: .5em;
 			color: #ffffff;
 			text-align: center;
 		}
 
 			.statistics li.style1 {
-				background-color: #efa8b0;
+				background-color: #0D3B66;
 			}
 
 			.statistics li.style2 {
-				background-color: #c79cc8;
+				background-color: #721121;
 			}
 
 			.statistics li.style3 {
-				background-color: #a89cc8;
+				background-color: #758E4F;
 			}
 
 			.statistics li.style4 {
-				background-color: #9bb2e1;
+				background-color: #C04CFD;
 			}
 
 			.statistics li.style5 {
-				background-color: #8cc9f0;
+				background-color: #F0A202;
 			}
 
 			.statistics li strong, .statistics li b {
@@ -2980,6 +2982,7 @@ input, select, textarea {
 		-ms-align-items: center;
 		align-items: center;
 		margin: 0 0 2em 0;
+		padding-top: 5em;
 	}
 
 		.spotlight .content {
@@ -2987,6 +2990,7 @@ input, select, textarea {
 			-webkit-flex: 1;
 			-ms-flex: 1;
 			flex: 1;
+			padding-left: 1em;
 		}
 
 			.spotlight .content > :last-child {
@@ -3000,14 +3004,16 @@ input, select, textarea {
 		.spotlight .image {
 			display: inline-block;
 			margin-left: 4em;
+			margin-right: 3em;
 			padding: 0.65em;
-			border-radius: 100%;
+			margin-top: 1em;
+			border-radius: 2px;
 			border: solid 1px;
 		}
 
 			.spotlight .image img {
 				display: block;
-				border-radius: 100%;
+				border-radius: 2px;
 				width: 16em;
 			}
 
@@ -3115,7 +3121,7 @@ input, select, textarea {
 				-ms-transition-delay: 0s;
 				transition-delay: 0s;
 				display: block;
-				margin: 0 0 1.5em 0;
+				margin: 0 0 0em 0;
 			}
 
 				#header.alt .logo img {
@@ -3337,8 +3343,12 @@ input, select, textarea {
 		background-color: #ffffff;
 		color: #636363;
 		border-radius: 0.25em;
+		margin-left: .5em;
+		margin-right: .5em;
 	}
-
+		#projects {
+			margin-top: 1em;
+		}
 		#main input, #main select, #main textarea {
 			color: #636363;
 		}
